# alethea-contract

./: .env.fresh  .env.registry-v2  .env.simple-market  .gitignore  Cargo.toml  LINERA_SDK_COMPLIANCE_ANALYSIS.md  README.md  WAVE_DELIVERABLES.md  execute-mint.sh  linera.toml  mint-operation.json  mint-to-address.sh  mint_token.py
.cargo/: config.toml
alethea-oracle-sdk/: .npmignore  CHANGELOG.md  FEEDBACK.md  PUBLICATION_STATUS.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  STABLE_RELEASE_PLAN.md  TASK_11_COMPLETE.md  alethea-oracle-sdk-1.0.0-beta.tgz  jest.config.js  package-lock.json  package.json  publish.sh  tsconfig.json
alethea-oracle-sdk/docs/: README.md  api-reference.md  best-practices.md  error-handling.md  examples.md  getting-started.md  index.html  migration-guide.md  troubleshooting.md
alethea-oracle-sdk/examples/: account-based-voter.ts  basic-usage.ts  query-creator.ts
alethea-oracle-sdk/scripts/: feedback-tracker.js  prepare-release.sh
alethea-oracle-sdk/src/: client.ts  errors.ts  index.ts  types.ts
alethea-oracle-types/: Cargo.toml
alethea-oracle-types/src/: constants.rs  graphql_types.rs  lib.rs  registry.rs  voter.rs
alethea-sdk/: Cargo.toml  README.md
alethea-sdk/src/: client.rs  lib.rs  types.rs
alethea-token/: Cargo.toml  README.md  deploy-local.sh  deploy.sh  init-state.json  linera.toml  params.json
alethea-token/src/: contract.rs  lib.rs  service.rs  state.rs
deployment/: alethea-backend.service  deploy.sh  nginx-api.conf  production.env.example
docs/: README.md
docs/alethea-network/: ARCHITECTURE_AUDIT_COMPLETE.md  ARCHITECTURE_SUMMARY.md  COMMUNICATION_ARCHITECTURE_DETAILED.md  COMMUNICATION_FLOW_SIMPLE.md  CREATE_MARKET_GUIDE.md  CURRENT_DEPLOYMENT_IDS.md  ORACLE_APPLICATION_PARAMETERS.md  QUICK_REFERENCE.md  QUICK_START_TESTING.md  README.md  SDK_INTEGRATION_GUIDE.md  SHARED_TYPES_VERIFICATION.md  START_HERE.md  TESTING_QUICK_START.md
docs/current/: ALETHEA_COMPETITIVE_ADVANTAGES.md  ALETHEA_ECONOMIC_MODEL.md  ALETHEA_USE_CASES.md  ALETHEA_VISION_ORACLE_RESOLUTION_LAYER.md  CLEANUP_SUMMARY_NOV_20.md  CURRENT_DEPLOYMENT_IDS.md  FINAL_STATUS_NOV_20_2025.md  QUICK_REFERENCE.md  UPDATES_NOV_20_2025.md
docs/fresh-deployment/: CURRENT_STATUS_AND_NEXT_STEPS.md  FINAL_SUMMARY_AND_RECOMMENDATION.md  FRESH_DEPLOYMENT_GUIDE.md  FRESH_DEPLOYMENT_SUMMARY.md  UPDATE_SUMMARY.md  WORKFLOW_READINESS_CHECK.md  WORKFLOW_STATUS_FINAL.md
docs/getting-started/: for-builders.md  for-voters.md
docs/guides/: ADVANCED_USE_CASES_IMPLEMENTATION.md  AUTO_TRIGGER_TEST_INSTRUCTIONS.md  END_TO_END_TEST_GUIDE.md  MARKET_CHAIN_DEPLOYMENT.md  QUICK_REFERENCE_VOTING.md  TESTING_GUIDE.md  TEST_READY_SUMMARY.md
integration-tests/: Cargo.toml  README.md
integration-tests/src/: external_market_flow.rs  helpers.rs  lib.rs  market_chain_integration.rs
linera-executor/: Cargo.toml  README.md
linera-executor/src/: executor.rs  main.rs
market-chain/: Cargo.toml
market-chain/src/: contract.rs  contract_with_sdk.rs  lib.rs  service.rs  state.rs
oracle-backend/: Cargo.toml
oracle-backend/src/: main.rs
oracle-cli/: Cargo.toml  README.md
oracle-cli/src/: commands.rs  config.rs  executor.rs  main.rs  operations.rs
oracle-cli/src/commands/: create_query.rs  init.rs  query.rs  register.rs  resolve.rs  rewards.rs  stake.rs  vote.rs
oracle-registry-v2/: AUTO_REGISTRATION_DESIGN.md  CROSS_CHAIN_SUMMARY.md  Cargo.toml  QUICK_REFERENCE.md  REGISTRATION_GUIDE.md  TESTING.md  TOKEN_INTEGRATION.md  USAGE_EXAMPLES.md  create-registry-chain.sh  init_params_simple.json  linera.toml
oracle-registry-v2/src/: admin_authorization_tests.rs  concurrent_operations_tests.rs  contract.rs  deadline_checking_tests.rs  edge_case_tests.rs  lib.rs  migration.rs  migration_tests.rs  multiple_voters_tests.rs  pause_protocol_tests.rs  query_creation_tests.rs  query_resolution_tests.rs  query_validation_tests.rs  reputation_tests.rs  reward_calculation_tests.rs  reward_claiming_tests.rs  reward_distribution_tests.rs  service.rs  slashing_tests.rs  stake_management_tests.rs  state.rs  strategy_comparison_tests.rs  test_utils.rs  update_parameters_tests.rs  voter_registration_tests.rs  voting_flow_integration_tests.rs  voting_tests.rs
oracle-registry-v2/tests/: integration_test.rs  test_register_voter.rs  test_register_voter_for.rs
scripts/: README.md  VOTING_GUIDE.md  admin-register-voter.sh  auto-resolve-cron.sh  backup-wallet-safe.sh  check-linera-setup.sh  clean-wallet-fresh-start.sh  clear-stuck-messages.sh  create-market-5min.sh  create-query-account-based.sh  deploy-account-based-registry.sh  deploy-external-dapp.sh  deploy-market-chain-v2.sh  deploy-market-chain.sh  deploy-registry-v2.sh  deploy-registry.sh  deploy-voter.sh  deploy-voters-existing-wallets.sh  export-old-registry-data.sh  fix-wallet-lock.sh  import-voters-to-new-registry.sh  initialize-voters-sequential.sh  initialize-voters.sh  migrate-active-queries.sh  monitor-account-based-registry.sh  onboard-voter-account-based.sh  process-stuck-messages.sh  rebuild-and-deploy.sh  redeploy-oracle-dev.sh  redeploy-services.sh  register-as-voter.sh  register-voter-new-chain.sh  register-voter-test.sh  register-voter.sh  restart-dashboard-voters.sh  safe-operation-wrapper.sh  setup-inbox-cron.sh  setup-local-network.sh  setup-local-testnet.sh  setup-test-environment.sh  (+18 more)
scripts/archive/: check-all-voters.sh  check-registered-voter.sh  check-registry-sync.sh  check-resolution-status.sh  check-sync.sh  check-voter-registration.sh  check-voters.sh  check-voting-results.sh  complete-workflow.sh  deploy-separate-chains-fixed.sh  deploy-separate-chains.sh  deploy-voter-separate-chain.sh  deploy-voters-one-chain.sh  fix-dashboard-resolved-markets.sh  initialize-and-register-voters.sh  initialize-voters.sh  register-voters-correct.sh  register-voters-final.sh  (+17 more)
simple-market/: Cargo.toml  DEBUGGING_GUIDE.md  README.md  deploy.sh
simple-market/src/: contract.rs  lib.rs  service.rs  state.rs
voter-template/: Cargo.toml
voter-template/src/: bin.rs  contract.rs  graphql_types.rs  lib.rs  service.rs  state.rs
(+7 files in other folders)
