# 🏛️ Alethea Contract - Smart Contracts for Alethea Oracle Network
# Decentralized Oracle Platform built on Linera Blockchain

[workspace]
resolver = "2"
members = [
    "oracle-registry-v2",
    "simple-market",
    "market-chain",
    "voter-template",
    "alethea-sdk",
    "alethea-oracle-types",
    "integration-tests",
    "oracle-cli",
    "linera-executor",
    "oracle-backend",
]

[workspace.package]
name = "alethea-contract"
version = "0.1.0"
edition = "2021"
authors = ["Alethea Network Team"]
description = "Smart contracts for Alethea Oracle Network on Linera blockchain"
repository = "https://github.com/mdlog/alethea-contract"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "oracle", "linera", "prediction-markets", "defi", "smart-contracts"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
linera-sdk = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bcs = "0.1"
async-graphql = "7.0"
futures = "0.3"
sha2 = "0.10"
bincode = "1.3"
log = "0.4"
alethea-oracle-types = { path = "alethea-oracle-types" }

# Additional dependencies
rand = "0.8"
hex = "0.4"
