[package]
name = "alethea-token"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
futures.workspace = true
linera-sdk.workspace = true
serde.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio.workspace = true

[[bin]]
name = "alethea-token-contract"
path = "src/contract.rs"

[[bin]]
name = "alethea-token-service"
path = "src/service.rs"
