[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
linera-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
alethea-oracle-types = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
