[package]
name = "linera-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Linera SDK
linera-sdk = "0.15"
linera-base = "0.15"
linera-core = "0.15"
linera-execution = "0.15"
linera-storage = "0.15"
linera-views = "0.15"
linera-rpc = "0.15"
linera-client = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Oracle Registry types
oracle-registry-v2 = { path = "../oracle-registry-v2" }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
hex = "0.4"

[[bin]]
name = "linera-executor"
path = "src/main.rs"
