[package]
name = "oracle-cli"
version = "0.1.0"
edition = "2021"
authors = ["Alethea Network Team"]
description = "CLI tool for Alethea Oracle Registry"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"

[[bin]]
name = "oracle-cli"
path = "src/main.rs"
