[package]
name = "oracle-registry-v2"
version = "0.2.0"
edition = "2021"
authors = ["Alethea Network Team"]
description = "Account-Based Oracle Registry for Alethea Protocol"
repository = "https://github.com/mdlog/alethea-network"
license = "MIT OR Apache-2.0"

[dependencies]
linera-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
async-graphql = { workspace = true }
bcs = { workspace = true }
alethea-oracle-types = { workspace = true }
futures = "0.3"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
linera-views = "0.15.5"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oracle_registry_v2_contract"
path = "src/contract.rs"

[[bin]]
name = "oracle_registry_v2_service"
path = "src/service.rs"
