[package]
name = "simple-market"
version = "0.1.0"
edition = "2021"
description = "Simple prediction market for testing Alethea/Registry v2 resolution"

[dependencies]
async-graphql = { workspace = true }
linera-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bcs = { workspace = true }
log = { workspace = true }
oracle-registry-v2 = { path = "../oracle-registry-v2" }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simple_market_contract"
path = "src/contract.rs"

[[bin]]
name = "simple_market_service"
path = "src/service.rs"

[dev-dependencies]
